--- a/src/app/pages/muse/components/muse/muse.component.html
+++ b/src/app/pages/muse/components/muse/muse.component.html
@@ -82,46 +82,245 @@
             </div>
             <owl-carousel-o [options]="customOptions" class="gallery">
                 <ng-template carouselSlide>
-                    <div class="gallery-image" >
+                    <div class="gallery-image-1" >
                         <div class="text-box-gradient">
                             <div class="gallery-text-box">
-                                <h3 class="h-3">MUSE x balmain</h3>
-                                <p class="p-3">Flex your style with full-body, expressive avatars.</p>
+                                <div>
+                                    <img class="img-left" src="/assets/images/ui-assets/balmain-logo.png"> 
+                                </div>
+                                <div>
+                                    <img class="img-right" src="/assets/images/ui-assets/shirt.png"> 
+                                </div>
                             </div>
                         </div>
                     </div>
                 </ng-template >
                 <ng-template carouselSlide>
-                    <div class="gallery-image" >
+                    <div class="gallery-image-2" >
                         <div class="text-box-gradient">
                             <div class="gallery-text-box">
-                                <h3 class="h-3">MUSE x balmain</h3>
-                                <p class="p-3">Flex your style with full-body, expressive avatars.</p>
+                                <div>
+                                    <img class="img-left" src="/assets/images/ui-assets/balmain-logo.png"> 
+                                </div>
+                                <div>
+                                    <img class="img-right" src="/assets/images/ui-assets/shirt.png"> 
+                                </div>
                             </div>
                         </div>
                     </div>
                 </ng-template >
                 <ng-template carouselSlide>
-                    <div class="gallery-image" >
+                    <div class="gallery-image-3" >
                         <div class="text-box-gradient">
                             <div class="gallery-text-box">
-                                <h3 class="h-3">MUSE x balmain</h3>
-                                <p class="p-3">Flex your style with full-body, expressive avatars.</p>
+                                <div>
+                                    <img class="img-left" src="/assets/images/ui-assets/muse-logo.png"> 
+                                </div>
+                                <div>
+                                    <img class="img-right" src="/assets/images/ui-assets/shirt.png"> 
+                                </div>
                             </div>
                         </div>
                     </div>
                 </ng-template >
                 <ng-template carouselSlide>
-                    <div class="gallery-image" >
+                    <div class="gallery-image-4" >
                         <div class="text-box-gradient">
                             <div class="gallery-text-box">
-                                <h3 class="h-3">MUSE x balmain</h3>
-                                <p class="p-3">Flex your style with full-body, expressive avatars.</p>
+                                <div>
+                                    <img class="img-left" src="/assets/images/ui-assets/muse-logo.png"> 
+                                </div>
+                                <div>
+                                    <img class="img-right" src="/assets/images/ui-assets/shirt.png"> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </ng-template >
+                <ng-template carouselSlide>
+                    <div class="gallery-image-5" >
+                        <div class="text-box-gradient">
+                            <div class="gallery-text-box">
+                                <div>
+                                    <img class="img-left" src="/assets/images/ui-assets/muse-logo.png"> 
+                                </div>
+                                <div>
+                                    <img class="img-right" src="/assets/images/ui-assets/shirt.png"> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </ng-template >
+                <ng-template carouselSlide>
+                    <div class="gallery-image-6" >
+                        <div class="text-box-gradient">
+                            <div class="gallery-text-box">
+                                <div>
+                                    <img class="img-left" src="/assets/images/ui-assets/muse-logo.png"> 
+                                </div>
+                                <div>
+                                    <img class="img-right" src="/assets/images/ui-assets/shirt.png"> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </ng-template >
+                <ng-template carouselSlide>
+                    <div class="gallery-image-7" >
+                        <div class="text-box-gradient">
+                            <div class="gallery-text-box">
+                                <div>
+                                    <img class="img-left" src="/assets/images/ui-assets/muse-logo.png"> 
+                                </div>
+                                <div>
+                                    <img class="img-right" src="/assets/images/ui-assets/shirt.png"> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </ng-template >
+                <ng-template carouselSlide>
+                    <div class="gallery-image-8" >
+                        <div class="text-box-gradient">
+                            <div class="gallery-text-box">
+                                <div>
+                                    <img class="img-left" src="/assets/images/ui-assets/muse-logo.png"> 
+                                </div>
+                                <div>
+                                    <img class="img-right" src="/assets/images/ui-assets/shirt.png"> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </ng-template >
+                <ng-template carouselSlide>
+                    <div class="gallery-image-9" >
+                        <div class="text-box-gradient">
+                            <div class="gallery-text-box">
+                                <div>
+                                    <img class="img-left" src="/assets/images/ui-assets/muse-logo.png"> 
+                                </div>
+                                <div>
+                                    <img class="img-right" src="/assets/images/ui-assets/shirt.png"> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </ng-template >
+                <ng-template carouselSlide>
+                    <div class="gallery-image-10" >
+                        <div class="text-box-gradient">
+                            <div class="gallery-text-box">
+                                <div>
+                                    <img class="img-left" src="/assets/images/ui-assets/muse-logo.png"> 
+                                </div>
+                                <div>
+                                    <img class="img-right" src="/assets/images/ui-assets/shirt.png"> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </ng-template >
+                <ng-template carouselSlide>
+                    <div class="gallery-image-11" >
+                        <div class="text-box-gradient">
+                            <div class="gallery-text-box">
+                                <div>
+                                    <img class="img-left" src="/assets/images/ui-assets/muse-logo.png"> 
+                                </div>
+                                <div>
+                                    <img class="img-right" src="/assets/images/ui-assets/shirt.png"> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </ng-template >
+                <ng-template carouselSlide>
+                    <div class="gallery-image-12" >
+                        <div class="text-box-gradient">
+                            <div class="gallery-text-box">
+                                <div>
+                                    <img class="img-left" src="/assets/images/ui-assets/muse-logo.png"> 
+                                </div>
+                                <div>
+                                    <img class="img-right" src="/assets/images/ui-assets/shirt.png"> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </ng-template >
+                <ng-template carouselSlide>
+                    <div class="gallery-image-13" >
+                        <div class="text-box-gradient">
+                            <div class="gallery-text-box">
+                                <div>
+                                    <img class="img-left" src="/assets/images/ui-assets/muse-logo.png"> 
+                                </div>
+                                <div>
+                                    <img class="img-right" src="/assets/images/ui-assets/shirt.png"> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </ng-template >
+                <ng-template carouselSlide>
+                    <div class="gallery-image-14" >
+                        <div class="text-box-gradient">
+                            <div class="gallery-text-box">
+                                <div>
+                                    <img class="img-left" src="/assets/images/ui-assets/muse-logo.png"> 
+                                </div>
+                                <div>
+                                    <img class="img-right" src="/assets/images/ui-assets/shirt.png"> 
+                                </div>
                             </div>
                         </div>
                     </div>
                 </ng-template >
         </owl-carousel-o>
+            <!-- ================Here is the old slider in the commented code============================ -->
+            <!-- <owl-carousel-o [options]="customOptions" class="gallery">
+                <ng-template carouselSlide>
+                    <div class="gallery-image" >
+                        <div class="text-box-gradient">
+                            <div class="gallery-text-box">
+                                <h3 class="h-3">MUSE x balmain</h3>
+                                <p class="p-3">Flex your style with full-body, expressive avatars.</p>
+                            </div>
+                        </div>
+                    </div>
+                </ng-template >
+                <ng-template carouselSlide>
+                    <div class="gallery-image" >
+                        <div class="text-box-gradient">
+                            <div class="gallery-text-box">
+                                <h3 class="h-3">MUSE x balmain</h3>
+                                <p class="p-3">Flex your style with full-body, expressive avatars.</p>
+                            </div>
+                        </div>
+                    </div>
+                </ng-template >
+                <ng-template carouselSlide>
+                    <div class="gallery-image" >
+                        <div class="text-box-gradient">
+                            <div class="gallery-text-box">
+                                <h3 class="h-3">MUSE x balmain</h3>
+                                <p class="p-3">Flex your style with full-body, expressive avatars.</p>
+                            </div>
+                        </div>
+                    </div>
+                </ng-template >
+                <ng-template carouselSlide>
+                    <div class="gallery-image" >
+                        <div class="text-box-gradient">
+                            <div class="gallery-text-box">
+                                <h3 class="h-3">MUSE x balmain</h3>
+                                <p class="p-3">Flex your style with full-body, expressive avatars.</p>
+                            </div>
+                        </div>
+                    </div>
+                </ng-template >
+        </owl-carousel-o> -->
             <!-- =============================================================== -->
            
             <div>
@@ -134,18 +333,6 @@
                 <div class="flex-1 faq-box-padding">
                     <mat-accordion>
                         <mat-expansion-panel [expanded]="true">
-                        <mat-expansion-panel-header>
-                            <mat-panel-title>
-                            <h2 class="faq-heading">This is a question?</h2>
-                            </mat-panel-title>
-                            <!-- <mat-panel-description>
-                            Type your name and age
-                            </mat-panel-description> -->
-                        </mat-expansion-panel-header>
-                    
-                       <p class="faq-text">This is a mixed reality experience of the Simulation Theory world tour, captured at the sold out Madrid’s Wanda Metropolitano Stadium. You can meet up with friends and fellow fans at the Muse virtual venue in the Stageverse as avatars, and experience the show from over 17 different viewpoints around the stadium. </p>
-                        </mat-expansion-panel>
-                        <mat-expansion-panel>
                         <mat-expansion-panel-header>
                             <mat-panel-title>
                             <h2 class="faq-heading">This is a question?</h2>
@@ -330,12 +517,14 @@
                         <div class="example-collection-item" >
                             <div class="logo-container">
                                 <img class="footer-logo" src="assets/images/ui-assets/Logo-comb.png" />
-                                <h1 class="footer-big-text">CAREERS
-                                    CREATORS
-                                    PRESS
-                                    COMPANY
-                                    BLOG
-                                    SUPPORT</h1>
+                                <h1 class="footer-big-text">
+                                    <li><a routerLink="/careers" class="links-a">CAREERS</a></li>
+                                    <li><a routerLink="/creators" class="links-a">CREATORS</a></li>
+                                    <li><a routerLink="/press" class="links-a">PRESS</a></li>
+                                    <li><a routerLink="/company" class="links-a">COMPANY</a></li>
+                                    <li><a routerLink="/blog" class="links-a">BLOG</a></li>
+                                    <li><a routerLink="/support" class="links-a">SUPPORT</a></li>
+                                     </h1>
                             </div>
                         </div>
                     </div>
@@ -345,7 +534,7 @@
                             <h2 class="footer-sub-heading">FUTURE CULTURE HAPPENS HERE.</h2>
                             <p class="footer-p-text">Stageverse is an NFT-based metaverse of beautifully designed 3D spaces, called Stages, that aims to connect a vibrant, diverse and pioneering collective of people, creators, communities and brands. The collective use Stageverse to socialize, connect, create, discover, grow, elevate creativity and move culture forward.</p>
     
-                        <div style="display: flex;flex-direction: row;">
+                        <div style="display: flex;flex-direction: row; margin-top: 9vh;">
     
                         <div class="leftinput" >
     
@@ -358,14 +547,14 @@
                         </div>
                             <div class="footer-social-media">
                                 <div class="footer-small-text">
-                                    <p style="font-size: 12px;">By signing up you are agreeing to the Stageverse <a style="text-decoration: underline;color: #fff;">Terms of Service</a> and Stageverse <a style="text-decoration: underline;color: #fff;">Privacy Policy</a>. You may unsubscribe at any time.</p>
+                                    <p style="font-size: 1.9vh;">By signing up you are agreeing to the Stageverse <a routerLink="/terms-of-service" class="links-a" style="text-decoration: underline;">Terms of Service</a> and Stageverse <a routerLink="/privacy" class="links-a" style="text-decoration: underline;">Privacy Policy</a>. You may unsubscribe at any time.</p>
     
                                 </div>
                                 <div class="social-media-footer-container">
-                                    <a href="#" class="social-media-footer"><img src="assets/images/ui-assets/instagram.png" alt="instagram icon"></a>
-                                    <a href="#" class="social-media-footer"><img src="assets/images/ui-assets/panda.png" alt="social icon"></a>
-                                    <a href="#" class="social-media-footer"><img src="assets/images/ui-assets/linkedIn.png" alt="linkedIn icon"></a>
-                                    <a href="#" class="social-media-footer"><img src="assets/images/ui-assets/twitter.png" alt="twitter icon"></a>
+                                    <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/instagram.png" alt="instagram icon"></a>
+                                    <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/panda.png" alt="social icon"></a>
+                                    <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/linkedIn.png" alt="linkedIn icon"></a>
+                                    <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/twitter.png" alt="twitter icon"></a>
     
                                 </div>
                             </div>
@@ -374,10 +563,5 @@
                     </div>
                 </div>
             </div>
-            
         </div>
-        <!-- <div class="content footer">
-            <app-footer></app-footer>
-        </div> -->
-    </div>
-    
+</div>
