--- a/src/app/pages/press/press.component.html
+++ b/src/app/pages/press/press.component.html
@@ -55,19 +55,19 @@
                             <h4 class="sm-head"> Links</h4>
                             <ul>
                                 <li class="p-y-10">
-                                    <a routerLink="/company" class="links-a">Company</a>
+                                    <a routerLink="/company" class="links-a link-font">Company</a>
                                 </li>
                                 <li class="p-y-10">
-                                    <a routerLink="/creators"  class="links-a">Creators</a>
+                                    <a routerLink="/creators"  class="links-a link-font">Creators</a>
                                 </li>
                                 <li class="p-y-10">
-                                    <a routerLink="/press"  class="links-a">Press</a>
+                                    <a routerLink="/press"  class="links-a link-font">Press</a>
                                 </li>
                                 <li class="p-y-10">
-                                    <a routerLink="/privacy"  class="links-a">Privacy</a>
+                                    <a routerLink="/privacy"  class="links-a link-font">Privacy</a>
                                 </li>
                                 <li class="p-y-10">
-                                    <a routerLink="/terms-of-service"  class="links-a">Terms</a>
+                                    <a routerLink="/terms-of-service"  class="links-a link-font">Terms</a>
                                 </li>
                             </ul>
                         </div>
@@ -77,55 +77,6 @@
             </div>
            
             <!-- =========================================================== -->
-            <owl-carousel-o [options]="customOptions">
-                <ng-template class="example-collection-grid" carouselSlide>
-                    <div class="example-collection-cell">
-                    <div class="slide stageverse-1">
-    
-                            <div class="stageverse-content ">
-                                <h4 class="stage-heading">Customizable Avatars</h4>
-                                <p class="stageverse-text stage-paragraph">Flex your style with full-body, expressive avatars.</p>
-    
-                            </div>
-    
-                    </div>
-                </div>
-                </ng-template>
-                <ng-template class="example-collection-grid" carouselSlide>
-                    <div class="example-collection-cell">
-                        <div class="slide stageverse-2">
-                        <div class="stageverse-content ">
-                            <h4 class="stage-heading">Friends & Parties</h4>
-                            <p class="stageverse-text stage-paragraph">Meet up and explore together. Can we add one more line here?</p>
-    
-                        </div>
-                        </div>
-                </div>
-                </ng-template>
-                <ng-template class="example-collection-grid" carouselSlide>
-                    <div class="example-collection-cell">
-                    <div class="slide stageverse-3">
-                        <div class="stageverse-content ">
-                            <h4 class="stage-heading">Spatial Voice Chat</h4>
-                            <p class="stageverse-text stage-paragraph">Talk and connect with others in beautifully-designed 3D spaces</p>
-    
-                        </div>
-                    </div>
-                </div>
-                </ng-template>
-                <ng-template class="example-collection-grid" carouselSlide>
-                    <div class="example-collection-cell">
-                    <div class="slide stageverse-4">
-                        <div class="stageverse-content ">
-                            <h4 class="stage-heading">Virtual Goods</h4>
-                            <p class="stageverse-text stage-paragraph">Play and express yourself with interactive toys and collectible items</p>
-    
-                        </div>
-                    </div>
-                </div>
-                </ng-template>
-    
-            </owl-carousel-o>
             <div>
                 <div class="title-container">
                     <h1 class="title-sm">DOWNLOAD</h1>
@@ -194,12 +145,14 @@
                         <div class="example-collection-item" >
                             <div class="logo-container">
                                 <img class="footer-logo" src="assets/images/ui-assets/Logo-comb.png" />
-                                <h1 class="footer-big-text">CAREERS
-                                    CREATORS
-                                    PRESS
-                                    COMPANY
-                                    BLOG
-                                    SUPPORT</h1>
+                                <h1 class="footer-big-text">
+                                    <li><a routerLink="/careers" class="links-a">CAREERS</a></li>
+                                    <li><a routerLink="/creators" class="links-a">CREATORS</a></li>
+                                    <li><a routerLink="/press" class="links-a">PRESS</a></li>
+                                    <li><a routerLink="/company" class="links-a">COMPANY</a></li>
+                                    <li><a routerLink="/blog" class="links-a">BLOG</a></li>
+                                    <li><a routerLink="/support" class="links-a">SUPPORT</a></li>
+                                     </h1>
                             </div>
                         </div>
                     </div>
@@ -209,7 +162,7 @@
                             <h2 class="footer-sub-heading">FUTURE CULTURE HAPPENS HERE.</h2>
                             <p class="footer-p-text">Stageverse is an NFT-based metaverse of beautifully designed 3D spaces, called Stages, that aims to connect a vibrant, diverse and pioneering collective of people, creators, communities and brands. The collective use Stageverse to socialize, connect, create, discover, grow, elevate creativity and move culture forward.</p>
     
-                        <div style="display: flex;flex-direction: row;">
+                        <div style="display: flex;flex-direction: row; margin-top: 9vh;">
     
                         <div class="leftinput" >
     
@@ -222,14 +175,14 @@
                         </div>
                             <div class="footer-social-media">
                                 <div class="footer-small-text">
-                                    <p style="font-size: 12px;">By signing up you are agreeing to the Stageverse <a style="text-decoration: underline;color: #fff;">Terms of Service</a> and Stageverse <a style="text-decoration: underline;color: #fff;">Privacy Policy</a>. You may unsubscribe at any time.</p>
+                                    <p style="font-size: 1.9vh;">By signing up you are agreeing to the Stageverse <a routerLink="/terms-of-service" class="links-a" style="text-decoration: underline;">Terms of Service</a> and Stageverse <a routerLink="/privacy" class="links-a" style="text-decoration: underline;">Privacy Policy</a>. You may unsubscribe at any time.</p>
     
                                 </div>
                                 <div class="social-media-footer-container">
-                                    <a href="#" class="social-media-footer"><img src="assets/images/ui-assets/instagram.png" alt="instagram icon"></a>
-                                    <a href="#" class="social-media-footer"><img src="assets/images/ui-assets/panda.png" alt="social icon"></a>
-                                    <a href="#" class="social-media-footer"><img src="assets/images/ui-assets/linkedIn.png" alt="linkedIn icon"></a>
-                                    <a href="#" class="social-media-footer"><img src="assets/images/ui-assets/twitter.png" alt="twitter icon"></a>
+                                    <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/instagram.png" alt="instagram icon"></a>
+                                    <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/panda.png" alt="social icon"></a>
+                                    <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/linkedIn.png" alt="linkedIn icon"></a>
+                                    <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/twitter.png" alt="twitter icon"></a>
     
                                 </div>
                             </div>
