--- a/src/app/pages/press/press.component.scss
+++ b/src/app/pages/press/press.component.scss
@@ -69,7 +69,6 @@
     flex: 1;
 }
 .paragraph{
-    font-family: Circular Std;
     font-style: normal;
     font-weight: normal;
     font-size: 3.7vh;
@@ -116,14 +115,6 @@
     padding: 5vh;
     margin-left: 6vh;
     background: rgba(255, 255, 255, 0.1);
-}
-.links-a{
-    color: white;
-    font-size: 3.5vh;
-}
-.links-a:hover{
-    background: linear-gradient(0deg, rgba(123, 97, 255, 0.2), rgba(123, 97, 255, 0.2)), #FFFFFF;
-    color: #0A091A;
 }
 .p-y-10{
     padding: 1.7vh 0vh;
@@ -180,42 +171,8 @@
     line-height: 130%;
     text-transform: uppercase;
 }
-.social-media-footer-container{
-    display: flex;
-    flex-direction: row;
-}
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: #fff;
-    opacity: 1; /* Firefox */
-  }
-  
-  :-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: #fff;
-  }
-  
-  ::-ms-input-placeholder { /* Microsoft Edge */
-    color: #fff;
-  }
-
 .download-container{
     display: none;
-}
-.footer-small-text{
-    width: 71%;
-}
-.logo-container{
-    margin-left: 5%;
-    width: 20%;
-    margin-top: 40px;
-}
-.footer-social-media{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 3%;
-}
-.footer-sub-contianer{
-    margin-top: 24%;
-    width: 85%;
 }
 .join-our-discord{
     margin-left: 20px;
@@ -289,70 +246,6 @@
     position: relative;
     top: 37%;
 }
-.search{
-
-    font-weight: 500;
-    width: 100%;
-    height: 52px;
-    border: 1px solid #FFFFFF;
-    box-sizing: border-box;
-    color: #fff;
-    font-size: 20px;
-    border-left: 0px;
-    border-right: 0px;
-    background: #0b091a;
-}
-.input-icon{
-
-    border-bottom-right-radius: 40px;
-    border-top-right-radius: 40px;
-    height: 52px;
-    line-height: 69px;
-    border: 1px solid #FFFFFF;
-    border-left: 0px;
-    padding-right: 0.5vw;
-    background: #0b091a;
-}
-.leftinput{
-    border: 1px solid #FFFFFF;
-
-    border-right: 0px;
-    background: #0b091a;
-    width: 38px;
-    border-bottom-left-radius: 40px;
-    border-top-left-radius: 40px;
-}
-.footer-big-text{
-    margin-top: 28%;
-    font-family: 'Druk Wide Bold';
-    letter-spacing: 0.04em;
-    line-height: 148%;
-    font-size: 2vw;
-    font-style: normal;
-    font-weight: normal;
-    color: #FFFFFF;
-    padding-bottom: 50px;
-}
-.footer-sub-heading{
-    font-family: 'Druk Wide Bold';
-    font-weight: 500;
-    font-size: 1.35vw;
-    line-height: 130%;
-    letter-spacing: -0.01em;
-}
-.footer-p-text{
-    font-family: Circular Std;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 1.24vw;
-    line-height: 130%;
-    letter-spacing: -0.01em;
-}
-.footer-bottom{
-    width: 94vw;
-    margin-left: auto;
-    margin-right: auto;
-}
 .example-collection-grid {
     display: -webkit-box;
     display: -webkit-flex;
@@ -368,14 +261,7 @@
     -webkit-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    -webkit-box-align: stretch;
-    -webkit-align-items: stretch;
-    -ms-flex-align: stretch;
-    align-items: stretch;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1 0 auto;
-    -ms-flex: 1 0 auto;
-    flex: 1 0 auto;
+   
 }
 .example-collection-cell {
     display: -webkit-box;
@@ -392,13 +278,6 @@
     -webkit-justify-content: flex-start;
     -ms-flex-pack: start;
     justify-content: flex-start;
-    -webkit-box-align: stretch;
-    -webkit-align-items: stretch;
-    -ms-flex-align: stretch;
-    align-items: stretch;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
     flex: 1;
 }
 .example-collection-item {
@@ -434,7 +313,119 @@
     -ms-flex-preferred-size: 50%;
     flex-basis: 50%;
 }
-// ==================================================mobile view css=================================================>>>>>>>>>>>>>>
+// -------------------------------------footer css---------------------------
+.social-media-footer-container{
+    display: flex;
+    flex-direction: row;
+    gap: 3.2vh;
+}
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: #fff;
+    opacity: 1; /* Firefox */
+  }
+  
+  :-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: #fff;
+  }
+  
+  ::-ms-input-placeholder { /* Microsoft Edge */
+    color: #fff;
+  }
+
+.footer-small-text{
+    width: 71%;
+}
+.logo-container{
+    margin-left: 8%;
+    width: 14%;
+    margin-top: 15vh;
+}
+.footer-social-media{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 3%;
+}
+.footer-sub-contianer{
+    margin-top: 33%;
+    width: 92%;
+}
+.search{
+    font-weight: 500;
+    width: 100%;
+    height: 80px;
+    border: 1px solid rgba(255, 255, 255, 0.45);
+    box-sizing: border-box;
+    color: #fff;
+    font-size: 3.8vh;
+    border-left: 0px;
+    border-right: 0px;
+    background: #0b091a;
+}
+.input-icon{
+    border-bottom-right-radius: 40px;
+    border-top-right-radius: 40px;
+    height: 80px;
+    line-height: 86px;
+    border: 1px solid rgba(255, 255, 255, 0.45);
+    border-left: 0px;
+    padding-right: 2vw;
+    background: #0b091a;
+}
+.leftinput{
+    border: 1px solid rgba(255, 255, 255, 0.45);
+    border-right: 0px;
+    background: #0b091a;
+    width: 50px;
+    border-bottom-left-radius: 40px;
+    border-top-left-radius: 40px;
+}
+.footer-big-text{
+    margin-top: 7vh;
+    font-family: 'Druk Wide Bold';
+    letter-spacing: 0.04em;
+    line-height: 148%;
+    font-size: 2.55vw;
+    font-style: normal;
+    font-weight: normal;
+    color: #FFFFFF;
+    padding-bottom: 50px;
+}
+.footer-sub-heading{
+    font-family: 'Druk Wide Bold';
+    font-weight: 500;
+    font-size: 3.1vh;
+    line-height: 130%;
+    letter-spacing: -0.01em;
+}
+.footer-p-text{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 2.5vh;
+    line-height: 130%;
+    margin-top: 3vh;
+    letter-spacing: -0.01em;
+}
+.footer-bottom{
+    width: 94vw;
+    margin-left: auto;
+    margin-right: auto;
+}
+.link-font{
+    font-size: 3.5vh;
+}
+.links-a{
+    color: white;
+}
+.links-a:hover{
+    // background: linear-gradient(0deg, rgba(123, 97, 255, 0.2), rgba(123, 97, 255, 0.2)), #FFFFFF;
+    color: #665BFF
+}
+.links-a img:hover{
+    opacity: 0.5;
+    background-size: contain;
+}
+// xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxEnd footer cssxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+// ===================================mobile view css start================================>>>>>>>>>>>>>>
 // On screens that are 600px or less, set the css property
 @media screen and (max-width: 600px) {
 
@@ -518,44 +509,6 @@
     font-size: 20px;
     word-spacing: 0px;
 }
-.footer-sm{
-    margin-top: 50px;
-    flex-direction: column;
-}
-.footer-social-media{
-    flex-direction: column;
-}
-.logo-container{
-    margin-top: 0px;
-    margin-left: 5%;
-}
-.footer-big-text{
-    font-size: 30px;
-    padding-bottom: 0px;
-}
-.footer-sub-heading{
-    font-size: 20px;
-}
-.footer-sub-contianer{
-    margin-top: 10%;
-    width: 82%;
-    margin-left: 30px;
-}
-.footer-p-text{
-    font-size: 20px;
-    margin-top: 40px;
-}
-.footer-small-text{
-    width: 85%;
-    font-size: 20px;
-}
-.social-media-footer-container{
-    margin-top: 40px;
-    margin-bottom: 30px;
-}
-.social-media-footer{
-    padding-right: 30px;
-}
 .h3{
     font-size: 26px;
     line-height: 30px;
@@ -574,8 +527,58 @@
 
 .title-container{
     margin-top: 4.5vh;
-    width: 86%;
+    width: 90%;
     padding: 15px 0px;
 }
+// ==========footer mobile view ====================
+.footer-sm{
+    margin-top: 50px;
+    flex-direction: column;
+}
+.footer-social-media{
+    flex-direction: column;
+}
+.logo-container{
+    margin-top: 0px;
+    margin-left: 5%;
+    width: 22%;
+}
+.footer-big-text{
+    font-size: 30px;
+    padding-bottom: 0px;
+}
+.footer-sub-heading{
+    font-size: 20px;
+}
+.footer-sub-contianer{
+    margin-top: 10%;
+    width: 82%;
+    margin-left: 21px;
+}
+.footer-p-text{
+    font-size: 20px;
+    margin-top: 40px;
+}
+.footer-small-text{
+    width: 85%;
+    font-size: 20px;
+}
+.input-icon{
+    height: 50px;
+    line-height: 60px;
+    padding-right: 5vw;
+}
+.search{
+    height: 50px;
+    font-size: 20px;
+}
+.social-media-footer-container{
+    margin-top: 40px;
+    margin-bottom: 30px;
+}
+.social-media-footer{
+    padding-right: 30px;
+}
+// ======End footer mobile CSS ============
 }
 // =========================================End media 600==================================================
