--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -19,10 +19,28 @@
                     <img src="/assets/images/ui-assets/ring.png" style="height: 60px;">
                 </a>
             </li>
-           <li class="nav-item disktop-hide" style="float: right !important; margin-top: -15px;"><a href="#" class="nav-link">
+           <li class="nav-item disktop-hide" style="float: right !important; margin-top: -15px;" (click)="showHide()"><a href="javascript:void(0);"  class="nav-link">
                <img src="/assets/images/ui-assets/menu-icon.png" style="height: 50px;" />
            </a></li>
         </ul>
+      
+        <ul *ngIf="menu==true" class="nav">
+            
+            <li class="nav-item "  style="display: flex;gap: 1px; float:right">
+                <a [routerLink]="" (click)="showEarlyAccess()" action="early-access"  class="nav-link" >
+                    <img src="/assets/images/ui-assets/apple-button.png" style="height: 60px;">
+                </a>
+                <a [routerLink]="" (click)="showEarlyAccess()" action="early-access"  class="nav-link">
+                    <img src="/assets/images/ui-assets/android-button.png" style="height: 60px;">
+                </a>
+                <a [routerLink]="" (click)="showEarlyAccess()" action="early-access" class="nav-link" >
+                    <img src="/assets/images/ui-assets/ring.png" style="height: 60px;">
+                </a>
+            </li>
+        </ul>
+       
+         
+        
     </div>
     <div class="body">
         <div>
@@ -399,12 +417,14 @@
                     <div class="example-collection-item" >
                         <div class="logo-container">
                             <img class="footer-logo" src="assets/images/ui-assets/Logo-comb.png" />
-                            <h1 class="footer-big-text">CAREERS
-                                CREATORS
-                                PRESS
-                                COMPANY
-                                BLOG
-                                SUPPORT</h1>
+                            <h1 class="footer-big-text">
+                                <li><a routerLink="/careers" class="links-a">CAREERS</a></li>
+                                <li><a routerLink="/creators" class="links-a">CREATORS</a></li>
+                                <li><a routerLink="/press" class="links-a">PRESS</a></li>
+                                <li><a routerLink="/company" class="links-a">COMPANY</a></li>
+                                <li><a routerLink="/blog" class="links-a">BLOG</a></li>
+                                <li><a routerLink="/support" class="links-a">SUPPORT</a></li>
+                                 </h1>
                         </div>
                     </div>
                 </div>
@@ -414,7 +434,7 @@
                         <h2 class="footer-sub-heading">FUTURE CULTURE HAPPENS HERE.</h2>
                         <p class="footer-p-text">Stageverse is an NFT-based metaverse of beautifully designed 3D spaces, called Stages, that aims to connect a vibrant, diverse and pioneering collective of people, creators, communities and brands. The collective use Stageverse to socialize, connect, create, discover, grow, elevate creativity and move culture forward.</p>
 
-                    <div style="display: flex;flex-direction: row;">
+                    <div style="display: flex;flex-direction: row; margin-top: 7vh;">
 
                     <div class="leftinput" >
 
@@ -427,14 +447,14 @@
                     </div>
                         <div class="footer-social-media">
                             <div class="footer-small-text">
-                                <p style="font-size: 12px;">By signing up you are agreeing to the Stageverse <a routerLink="/terms-of-service" style="text-decoration: underline;color: #fff;">Terms of Service</a> and Stageverse <a routerLink="/privacy" style="text-decoration: underline;color: #fff;">Privacy Policy</a>. You may unsubscribe at any time.</p>
+                                <p style="font-size: 1.9vh;">By signing up you are agreeing to the Stageverse <a routerLink="/terms-of-service" class="links-a" style="text-decoration: underline;">Terms of Service</a> and Stageverse <a routerLink="/privacy" class="links-a" style="text-decoration: underline;">Privacy Policy</a>. You may unsubscribe at any time.</p>
 
                             </div>
                             <div class="social-media-footer-container">
-                                <a href="#" class="social-media-footer"><img src="assets/images/ui-assets/instagram.png" alt="instagram icon"></a>
-                                <a href="#" class="social-media-footer"><img src="assets/images/ui-assets/panda.png" alt="social icon"></a>
-                                <a href="#" class="social-media-footer"><img src="assets/images/ui-assets/linkedIn.png" alt="linkedIn icon"></a>
-                                <a href="#" class="social-media-footer"><img src="assets/images/ui-assets/twitter.png" alt="twitter icon"></a>
+                                <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/instagram.png" alt="instagram icon"></a>
+                                <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/panda.png" alt="social icon"></a>
+                                <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/linkedIn.png" alt="linkedIn icon"></a>
+                                <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/twitter.png" alt="twitter icon"></a>
 
                             </div>
                         </div>
@@ -445,7 +465,7 @@
         </div>
     </div>
 
-    <div class="content footer">
-        <app-footer></app-footer>
-    </div>
+<div class="content footer" style="margin-top: 120px; background: rgba(0, 0, 0, 0.5);">
+    <app-footer></app-footer>
+</div>
 </div>
