--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -68,43 +68,8 @@
 .disktop-hide{
     display: none !important;
 }
-.social-media-footer-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 15vw;
-}
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: #fff;
-    opacity: 1; /* Firefox */
-  }
-  
-  :-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: #fff;
-  }
-  
-  ::-ms-input-placeholder { /* Microsoft Edge */
-    color: #fff;
-  }
 .download-container{
     display: none;
-}
-.footer-small-text{
-    width: 23vw;
-}
-.logo-container{
-    margin-left: 5%;
-    width: 20%;
-    margin-top: 40px;
-}
-.footer-social-media{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 3%;
-}
-.footer-sub-contianer{
-    margin-top: 24%;
-    width: 85%;
 }
 .join-our-discord{
     margin-left: 20px;
@@ -140,7 +105,6 @@
     margin-top: 10vh;
 }
 .left-image{
-
     background-image:
     linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 100%),
     url('/assets/images/ui-assets/CenterStage.png');
@@ -149,8 +113,6 @@
     object-fit: cover;
     background-repeat: no-repeat;
     height: 130vh;
-
-
 }
 .cornor-image{
     background: url(/assets/images/ui-assets/cornor-background.png) no-repeat;
@@ -359,249 +321,238 @@
     text-transform: uppercase;
     color: #FFFFFF;
 }
-// .learnmore{
-//     font-style: normal;
-//     font-weight: normal;
-//     font-size: 20px;
-//     line-height: 110%;
-//     text-decoration-line: underline;
-//     color: #FFFFFF;
-// }
 .simulation-content-2{
-  position: relative;
-  top: 57vh;
-  text-align: left;
-  margin-left: 6%;
-}
-.simulation-content-3{
-    position: relative;
-    top: 60%;
-   text-align: left;
-   margin-left: 5%;
-}
-.simulation-content-venues{
-    position: relative;
-    top: 79vh;
-   text-align: left;
-   margin-left: 6%;
-}
-.example-collection-cell {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    padding: 5px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: start;
-    -webkit-justify-content: flex-start;
-    -ms-flex-pack: start;
-    justify-content: flex-start;
-    -webkit-box-align: stretch;
-    -webkit-align-items: stretch;
-    -ms-flex-align: stretch;
-    align-items: stretch;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-}
-.muse{
-    background-image: url('/assets/images/ui-assets/center-stage.png');
-    background-position: center;
-
-    background-size:100% 100%;
-    object-fit: cover;
-    background-repeat: no-repeat;
-       height: 90vh;
-}
-.muse-2{
-    background-image: url('/assets/images/ui-assets/future-dome.png');
-    background-position: center;
-    background-size:100% 100%;
-    object-fit: cover;
-    background-repeat: no-repeat;
-       height: 90vh;
-}
-.muse-content{
-    position: relative;
-    top: 66vh;
-    margin-left: 6%;
-}
-
-.culture{
-    background: linear-gradient(0deg, #665AFF, #665AFF),url('/assets/images/ui-assets/cornor-background.png'); height: 60vh;
-}
-.culture-text{
-    position: relative;
-    top: 21%;
-    text-align: left;
-    margin-left: 5%;
-    width: 60vw;
-}
-.culture-subtitle{
-font-style: normal;
-font-weight: normal;
-font-size: 1.82vw;
-line-height: 126%;
-letter-spacing: -0.01em;
-font-feature-settings: 'ss02' on;
-color: #FFFFFF;
-}
-.culture-title{
-    font-family: 'Druk Wide Bold';
-    font-style: normal;
-    font-weight: bold;
-    font-size: 3vw;
-    line-height: 110%;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-    font-feature-settings: 'ss04' on, 'ss02' on, 'ss01' on;
-    color: #FFFFFF;
-}
-.collection-left{
-    background-image: url('/assets/images/ui-assets/muse.png');
-    background-size:100% 100%;
-    object-fit: cover;
-    background-repeat: no-repeat;
-    height: 80vh;
-    background-position: center;
-}
-.collection-right{
-    background-image: url('/assets/images/ui-assets/balmain.png');
-    background-size:100% 100%;
-    object-fit: cover;
-    background-repeat: no-repeat;
-    height: 80vh;
-    background-position: center;
-}
-.membership{
-    background: linear-gradient(84.67deg, #FF675C -32.42%, #ff5cf5 151.18%);
-    height: 70vh;
-}
-.membership-left{
-
-}
-.membership-right{
-    background: linear-gradient(
-82.91deg, #0b091a00 -213.78%, rgba(0, 0, 0, 0) 195.01%), url(/assets/images/ui-assets/culture.png);
-    background-size: cover;
-    mix-blend-mode: color-dodge;
-    transform: rotate(
-0.52deg
-);
-    background-repeat: no-repeat;
-    /* margin-top: 18%; */
-    min-height: 69vh;
-    background-position-x: center;
-}
-.membership-text{
-    position: relative;
-    top: 20%;
-    text-align: left;
-    margin-left: 6%;
-}
-.stageverse-content{
     position: relative;
     top: 57vh;
-    margin-left: 16%;
-
-}
-.stageverse-1{
-    background-image: url('/assets/images/ui-assets/women.png');
-    background-size: 100% 100%; 
-    background-repeat: no-repeat; 
-    height: 75vh;    
-    background-position: bottom;
-}
-.stageverse-2{
-    background-image: url('/assets/images/ui-assets/racket.png');
-    background-size: 100% 100%; 
-    background-repeat: no-repeat; 
-    height: 75vh;    
-    background-position: center;
-}
-.stageverse-3{
-    background-image:url('/assets/images/ui-assets/glass.png');
-    background-size: 100% 100%; 
-    background-repeat: no-repeat; 
-    height: 75vh;    
-    background-position: center;
-}
-.stageverse-4{
-    background-image: url('/assets/images/ui-assets/goods.png');
-    background-size: 100% 100%; 
-    background-repeat: no-repeat; 
-    height: 75vh;    
-    background-position: center;
-}
-.btn-position{
-    position: relative;
-    top: 5vh;
-}
-.S{
-    font-style: normal;
-    font-weight: normal;
-    font-size: 1.25vw;
-    line-height: 3.1vh;
-    color: #FFFFFF;
-}
-.download{
-    position: relative;
-    top: 6vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: black;
-}
-.download-1{
-    background:linear-gradient(270deg, #5CFFB8 0%, #F4FF5C 100%);
-    height: 60vh;
-}
-.download-2{
-    background: linear-gradient(270deg, #665AFF 0%, #5CFFB8 100%);
-}
-.download-3{
-    background: linear-gradient(270deg, #FF5CF4 0%, #665AFF 100%);
-}
-.download-4{
-    background: linear-gradient(270deg, #FF675C 0%, #FF5CF4 100%);
-}
-.download-title{
-    margin-bottom: 10vh;
-    font-family: 'Druk Wide Bold';
-    font-style: normal;
-    font-weight: bold;
-    font-size: 2vw;
-    line-height: 130%;
-    text-transform: uppercase;
-    color: #000000;
-}
-.download-btn{
-    margin-top: 15vh;
-    background-color: black !important;
-    color: white !important;
-}
-.download-img{
-    height: 16vh;
-
-}
-.quest{
-    height: 13vh;
-    margin-top: 3vh;
-
-}
-.coming-soon{
-    position: relative;
-    top: 37%;
-}
-.social-media-footer{
-    margin: 0px 8px;
-}
-.membership-title{
+    text-align: left;
+    margin-left: 6%;
+  }
+  .simulation-content-3{
+      position: relative;
+      top: 60%;
+     text-align: left;
+     margin-left: 5%;
+  }
+  .simulation-content-venues{
+      position: relative;
+      top: 79vh;
+     text-align: left;
+     margin-left: 6%;
+  }
+  .example-collection-cell {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      padding: 5px;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-pack: start;
+      -webkit-justify-content: flex-start;
+      -ms-flex-pack: start;
+      justify-content: flex-start;
+      -webkit-box-align: stretch;
+      -webkit-align-items: stretch;
+      -ms-flex-align: stretch;
+      align-items: stretch;
+      -webkit-box-flex: 1;
+      -webkit-flex: 1;
+      -ms-flex: 1;
+      flex: 1;
+  }
+  .muse{
+      background-image: url('/assets/images/ui-assets/center-stage.png');
+      background-position: center;
+  
+      background-size:100% 100%;
+      object-fit: cover;
+      background-repeat: no-repeat;
+         height: 90vh;
+  }
+  .muse-2{
+      background-image: url('/assets/images/ui-assets/future-dome.png');
+      background-position: center;
+      background-size:100% 100%;
+      object-fit: cover;
+      background-repeat: no-repeat;
+         height: 90vh;
+  }
+  .muse-content{
+      position: relative;
+      top: 66vh;
+      margin-left: 6%;
+  }
+  
+  .culture{
+      background: linear-gradient(0deg, #665AFF, #665AFF),url('/assets/images/ui-assets/cornor-background.png'); height: 60vh;
+  }
+  .culture-text{
+      position: relative;
+      top: 21%;
+      text-align: left;
+      margin-left: 5%;
+      width: 60vw;
+  }
+  .culture-subtitle{
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.82vw;
+  line-height: 126%;
+  letter-spacing: -0.01em;
+  font-feature-settings: 'ss02' on;
+  color: #FFFFFF;
+  }
+  .culture-title{
+      font-family: 'Druk Wide Bold';
+      font-style: normal;
+      font-weight: bold;
+      font-size: 3vw;
+      line-height: 110%;
+      letter-spacing: 0.02em;
+      text-transform: uppercase;
+      font-feature-settings: 'ss04' on, 'ss02' on, 'ss01' on;
+      color: #FFFFFF;
+  }
+  .collection-left{
+      background-image: url('/assets/images/ui-assets/muse.png');
+      background-size:100% 100%;
+      object-fit: cover;
+      background-repeat: no-repeat;
+      height: 80vh;
+      background-position: center;
+  }
+  .collection-right{
+      background-image: url('/assets/images/ui-assets/balmain.png');
+      background-size:100% 100%;
+      object-fit: cover;
+      background-repeat: no-repeat;
+      height: 80vh;
+      background-position: center;
+  }
+  .membership{
+      background: linear-gradient(84.67deg, #FF675C -32.42%, #ff5cf5 151.18%);
+      height: 70vh;
+  }
+  .membership-left{
+  
+  }
+  .membership-right{
+      background: linear-gradient(
+  82.91deg, #0b091a00 -213.78%, rgba(0, 0, 0, 0) 195.01%), url(/assets/images/ui-assets/culture.png);
+      background-size: cover;
+      mix-blend-mode: color-dodge;
+      transform: rotate(
+  0.52deg
+  );
+      background-repeat: no-repeat;
+      /* margin-top: 18%; */
+      min-height: 69vh;
+      background-position-x: center;
+  }
+  .membership-text{
+      position: relative;
+      top: 20%;
+      text-align: left;
+      margin-left: 6%;
+  }
+  .stageverse-content{
+      position: relative;
+      top: 57vh;
+      margin-left: 16%;
+  
+  }
+  .stageverse-1{
+      background-image: url('/assets/images/ui-assets/women.png');
+      background-size: 100% 100%; 
+      background-repeat: no-repeat; 
+      height: 75vh;    
+      background-position: bottom;
+  }
+  .stageverse-2{
+      background-image: url('/assets/images/ui-assets/racket.png');
+      background-size: 100% 100%; 
+      background-repeat: no-repeat; 
+      height: 75vh;    
+      background-position: center;
+  }
+  .stageverse-3{
+      background-image:url('/assets/images/ui-assets/glass.png');
+      background-size: 100% 100%; 
+      background-repeat: no-repeat; 
+      height: 75vh;    
+      background-position: center;
+  }
+  .stageverse-4{
+      background-image: url('/assets/images/ui-assets/goods.png');
+      background-size: 100% 100%; 
+      background-repeat: no-repeat; 
+      height: 75vh;    
+      background-position: center;
+  }
+  .btn-position{
+      position: relative;
+      top: 5vh;
+  }
+  .S{
+      font-style: normal;
+      font-weight: normal;
+      font-size: 1.25vw;
+      line-height: 3.1vh;
+      color: #FFFFFF;
+  }
+  .download{
+      position: relative;
+      top: 6vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      color: black;
+  }
+  .download-1{
+      background:linear-gradient(270deg, #5CFFB8 0%, #F4FF5C 100%);
+      height: 60vh;
+  }
+  .download-2{
+      background: linear-gradient(270deg, #665AFF 0%, #5CFFB8 100%);
+  }
+  .download-3{
+      background: linear-gradient(270deg, #FF5CF4 0%, #665AFF 100%);
+  }
+  .download-4{
+      background: linear-gradient(270deg, #FF675C 0%, #FF5CF4 100%);
+  }
+  .download-title{
+      margin-bottom: 10vh;
+      font-family: 'Druk Wide Bold';
+      font-style: normal;
+      font-weight: bold;
+      font-size: 2vw;
+      line-height: 130%;
+      text-transform: uppercase;
+      color: #000000;
+  }
+  .download-btn{
+      margin-top: 15vh;
+      background-color: black !important;
+      color: white !important;
+  }
+  .download-img{
+      height: 16vh;
+  
+  }
+  .quest{
+      height: 13vh;
+      margin-top: 3vh;
+  
+  }
+  .coming-soon{
+      position: relative;
+      top: 37%;
+  }
+  .membership-title{
     font-family: 'DRUK WIDE BOLD';
     font-style: normal;
     font-weight: bold;
@@ -656,70 +607,6 @@ color: #FFFFFF;
     -ms-flex-preferred-size: 50%;
     flex-basis: 50%;
 }
-.search{
-
-    font-weight: 500;
-    width: 100%;
-    height: 52px;
-    border: 1px solid #FFFFFF;
-    box-sizing: border-box;
-    color: #fff;
-    font-size: 20px;
-    border-left: 0px;
-    border-right: 0px;
-    background: #0b091a;
-}
-.input-icon{
-
-    border-bottom-right-radius: 40px;
-    border-top-right-radius: 40px;
-    height: 52px;
-    line-height: 69px;
-    border: 1px solid #FFFFFF;
-    border-left: 0px;
-    padding-right: 0.5vw;
-    background: #0b091a;
-}
-.leftinput{
-    border: 1px solid #FFFFFF;
-
-    border-right: 0px;
-    background: #0b091a;
-    width: 38px;
-    border-bottom-left-radius: 40px;
-    border-top-left-radius: 40px;
-}
-.footer-big-text{
-    margin-top: 28%;
-    font-family: 'Druk Wide Bold';
-    letter-spacing: 0.04em;
-    line-height: 148%;
-    font-size: 2vw;
-    font-style: normal;
-    font-weight: normal;
-    color: #FFFFFF;
-    padding-bottom: 50px;
-}
-.footer-sub-heading{
-    font-family: 'Druk Wide Bold';
-    font-weight: 500;
-    font-size: 1.35vw;
-    line-height: 130%;
-    letter-spacing: -0.01em;
-}
-.footer-p-text{
-    font-family: Circular Std;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 1.24vw;
-    line-height: 130%;
-    letter-spacing: -0.01em;
-}
-.footer-bottom{
-    width: 94vw;
-    margin-left: auto;
-    margin-right: auto;
-}
 .stage-heading{
     font-weight: bold;
     font-size: 1.6rem;
@@ -733,6 +620,118 @@ color: #FFFFFF;
     line-height: 1.7rem;
     width: 80.9%;
 }
+// ===================================footer===============================
+.social-media-footer-container{
+    display: flex;
+    flex-direction: row;
+    gap: 3.2vh;
+}
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: #fff;
+    opacity: 1; /* Firefox */
+  }
+  
+  :-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: #fff;
+  }
+  
+  ::-ms-input-placeholder { /* Microsoft Edge */
+    color: #fff;
+  }
+
+.footer-small-text{
+    width: 71%;
+}
+.logo-container{
+    margin-left: 8%;
+    width: 14%;
+    margin-top: 15vh;
+}
+.footer-social-media{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 3%;
+}
+.footer-sub-contianer{
+    margin-top: 33%;
+    width: 92%;
+}
+.search{
+    font-weight: 500;
+    width: 100%;
+    height: 80px;
+    border: 1px solid rgba(255, 255, 255, 0.45);
+    box-sizing: border-box;
+    color: #fff;
+    font-size: 3.8vh;
+    border-left: 0px;
+    border-right: 0px;
+    background: #0b091a;
+}
+.input-icon{
+    border-bottom-right-radius: 40px;
+    border-top-right-radius: 40px;
+    height: 80px;
+    line-height: 86px;
+    border: 1px solid rgba(255, 255, 255, 0.45);
+    border-left: 0px;
+    padding-right: 2vw;
+    background: #0b091a;
+}
+.leftinput{
+    border: 1px solid rgba(255, 255, 255, 0.45);
+    border-right: 0px;
+    background: #0b091a;
+    width: 50px;
+    border-bottom-left-radius: 40px;
+    border-top-left-radius: 40px;
+}
+.footer-big-text{
+    margin-top: 7vh;
+    font-family: 'Druk Wide Bold';
+    letter-spacing: 0.04em;
+    line-height: 148%;
+    font-size: 2.55vw;
+    font-style: normal;
+    font-weight: normal;
+    color: #FFFFFF;
+    padding-bottom: 50px;
+}
+.footer-sub-heading{
+    font-family: 'Druk Wide Bold';
+    font-weight: 500;
+    font-size: 3.1vh;
+    line-height: 130%;
+    letter-spacing: -0.01em;
+}
+.footer-p-text{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 2.5vh;
+    line-height: 130%;
+    margin-top: 3vh;
+    letter-spacing: -0.01em;
+}
+.footer-bottom{
+    width: 94vw;
+    margin-left: auto;
+    margin-right: auto;
+}
+.link-font{
+    font-size: 3.5vh;
+}
+.links-a{
+    color: white;
+}
+.links-a:hover{
+    // background: linear-gradient(0deg, rgba(123, 97, 255, 0.2), rgba(123, 97, 255, 0.2)), #FFFFFF;
+    color: #665BFF
+}
+.links-a img:hover{
+    opacity: 0.5;
+    background-size: contain;
+}
+// =============End of Footer css =======================================
 // ==================================================mobile view css=================================================>>>>>>>>>>>>>>
 // On screens that are 600px or less, set the css property
 @media screen and (max-width: 600px) {
@@ -928,45 +927,6 @@ color: #FFFFFF;
     width: 350px;
     margin-left: 30px;
 }
-.footer-sm{
-    margin-top: 50px;
-    flex-direction: column;
-}
-.footer-social-media{
-    flex-direction: column;
-}
-.logo-container{
-    margin-top: 0px;
-    margin-left: 5%;
-}
-.footer-big-text{
-    font-size: 30px;
-    padding-bottom: 0px;
-}
-.footer-sub-heading{
-    font-size: 20px;
-}
-.footer-sub-contianer{
-    margin-top: 10%;
-    width: 82%;
-    margin-left: 30px;
-}
-.footer-p-text{
-    font-size: 20px;
-    margin-top: 40px;
-}
-.footer-small-text{
-    width: 85%;
-    font-size: 20px;
-}
-.social-media-footer-container{
-    width: 100%;
-    margin-top: 40px;
-    margin-bottom: 30px;
-}
-.social-media-footer{
-    padding-right: 30px;
-}
 .h3{
     font-size: 26px;
     line-height: 30px;
@@ -1057,6 +1017,56 @@ color: #FFFFFF;
 .culture-right{
     background-image: none;
 }
+// -------------------Footer CSS---------------------------------------
+.footer-sm{
+    margin-top: 50px;
+    flex-direction: column;
+}
+.footer-social-media{
+    flex-direction: column;
+}
+.logo-container{
+    margin-top: 0px;
+    margin-left: 5%;
+    width: 22%;
+}
+.footer-big-text{
+    font-size: 30px;
+    padding-bottom: 0px;
+}
+.footer-sub-heading{
+    font-size: 20px;
+}
+.footer-sub-contianer{
+    margin-top: 10%;
+    width: 82%;
+    margin-left: 21px;
+}
+.footer-p-text{
+    font-size: 20px;
+    margin-top: 40px;
+}
+.footer-small-text{
+    width: 85%;
+    font-size: 20px;
+}
+.input-icon{
+    height: 50px;
+    line-height: 60px;
+    padding-right: 5vw;
+}
+.search{
+    height: 50px;
+    font-size: 20px;
+}
+.social-media-footer-container{
+    margin-top: 40px;
+    margin-bottom: 30px;
+}
+.social-media-footer{
+    padding-right: 30px;
+}
+// ========end of footer mobile css============
 }
 // =========================================End media 600==================================================
 // =========================================Start media 414 and less than 414px============================
