--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -8,7 +8,8 @@
 }
 
 .site-footer {
-     background: #000;
+    background: rgba(0, 0, 0, 0.5);
+    height: 16.5vh;
     // border-top: 1px solid rgba(117,50,29,.13);
     padding: 3.5625rem 0;
     text-align: center;
@@ -110,6 +111,9 @@
         }
         a {
             color: white;
+        }
+        a:hover{
+            color: #665BFF;
         }
     }
 }
