--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -23,6 +23,8 @@
 @import 'scroll-content';
 @import '~ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
 @import '~ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
+@import 'https://fonts.googleapis.com/icon?family=Material+Icons';
+@import '~@angular/material/prebuilt-themes/indigo-pink.css'; 
 // @import './vendors';
 
 // @import '~@angular/material/prebuilt-themes/indigo-pink.css';
